exports[`findByUserIdFactory > should return multiple organizations when user has multiple organizations 1`] = `
[
  {
    "id": 1,
    "siret": "40000000000001",
    "created_at": "2023-01-15T00:00:00.000Z",
    "updated_at": "2024-02-10T00:00:00.000Z",
    "cached_libelle": "⚰️",
    "cached_nom_complet": "Sautekh Dynasty",
    "cached_enseigne": null,
    "cached_tranche_effectifs": null,
    "cached_tranche_effectifs_unite_legale": null,
    "cached_libelle_tranche_effectif": null,
    "cached_etat_administratif": null,
    "cached_est_active": null,
    "cached_statut_diffusion": null,
    "cached_est_diffusible": null,
    "cached_adresse": null,
    "cached_code_postal": null,
    "cached_activite_principale": null,
    "cached_libelle_activite_principale": null,
    "cached_categorie_juridique": null,
    "cached_libelle_categorie_juridique": null,
    "organization_info_fetched_at": null,
    "cached_code_officiel_geographique": null,
    "is_external": false,
    "is_executive": true,
    "verification_type": "necron",
    "has_been_greeted": true,
    "needs_official_contact_email_verification": false,
    "official_contact_email_verification_token": "necron_token_1",
    "official_contact_email_verification_sent_at": "2023-01-26T00:00:00.000Z"
  },
  {
    "id": 3,
    "siret": "40000000000003",
    "created_at": "2023-03-25T00:00:00.000Z",
    "updated_at": "2024-04-12T00:00:00.000Z",
    "cached_libelle": "🤖",
    "cached_nom_complet": "Szarekhan Dynasty",
    "cached_enseigne": null,
    "cached_tranche_effectifs": null,
    "cached_tranche_effectifs_unite_legale": null,
    "cached_libelle_tranche_effectif": null,
    "cached_etat_administratif": null,
    "cached_est_active": null,
    "cached_statut_diffusion": null,
    "cached_est_diffusible": null,
    "cached_adresse": null,
    "cached_code_postal": null,
    "cached_activite_principale": null,
    "cached_libelle_activite_principale": null,
    "cached_categorie_juridique": null,
    "cached_libelle_categorie_juridique": null,
    "organization_info_fetched_at": null,
    "cached_code_officiel_geographique": null,
    "is_external": true,
    "is_executive": false,
    "verification_type": "alliance",
    "has_been_greeted": false,
    "needs_official_contact_email_verification": true,
    "official_contact_email_verification_token": "alliance_token_1",
    "official_contact_email_verification_sent_at": "2023-04-02T00:00:00.000Z"
  }
]
`;

exports[`findByUserIdFactory > should return single organization when user has one organization 1`] = `
[
  {
    "id": 5,
    "siret": "40000000000005",
    "created_at": "2023-05-05T00:00:00.000Z",
    "updated_at": "2024-06-20T00:00:00.000Z",
    "cached_libelle": "👨‍🚀",
    "cached_nom_complet": "Ultramarines Chapter",
    "cached_enseigne": null,
    "cached_tranche_effectifs": null,
    "cached_tranche_effectifs_unite_legale": null,
    "cached_libelle_tranche_effectif": null,
    "cached_etat_administratif": null,
    "cached_est_active": null,
    "cached_statut_diffusion": null,
    "cached_est_diffusible": null,
    "cached_adresse": null,
    "cached_code_postal": null,
    "cached_activite_principale": null,
    "cached_libelle_activite_principale": null,
    "cached_categorie_juridique": null,
    "cached_libelle_categorie_juridique": null,
    "organization_info_fetched_at": null,
    "cached_code_officiel_geographique": null,
    "is_external": false,
    "is_executive": true,
    "verification_type": "imperial",
    "has_been_greeted": true,
    "needs_official_contact_email_verification": false,
    "official_contact_email_verification_token": "imperial_token_6",
    "official_contact_email_verification_sent_at": "2023-07-06T00:00:00.000Z"
  }
]
`;
